--- a/style.css
+++ b/style.css
@@ -17,11 +17,9 @@ html, body {
 .text {
   font-family: "Special Elite";
   font-size: 25px;
-  margin-right: 600px;
-  padding: 0px 20px;
 }
 .quote{
-  background-color: #ad9576;
+  background-color: #cab191;
   font-family: "Special Elite";
   border-radius: 20px;
   text-align: center;
@@ -29,6 +27,25 @@ html, body {
   margin: 60px 300px;
   padding: 40px 15px;
 }
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 700px;
+  height:auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -57,4 +74,468 @@ li a:hover:not(.active) {
 
 .active {
   background-color: #593418;
+}
+
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 250px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 250px;
+  height: 220px;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+.button {
+  background-color: #9edae6;
+  border-radius: 12px;
+  border:#9edae6;
+  color: #1d1a0c;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+
+ 
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+::before
+::after {
+  content: "";
+}
+
+body {
+background: #000000;  
+  color: #000000;
+  font-family: "Special Elite";
+  font-weight: 400;
+  line-height: 1.35;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img{
+  width: 100%;
+  height: 1005;
+}
+
+.align{
+  clear: both;
+  margin:120px auto 20px;
+  width: 100%;
+  max-width: 1170px;
+  text-align: center;
+}
+
+.align>li{
+  width: 700px;
+  min-height: 300px;
+  display: inline-block;
+  margin: 30px 20px 30px 30px;
+  padding: 0 0 0 60px;
+  vertical-align: top;
+}
+
+.book {
+  position: relative;
+  width: 160px;
+  height: 220px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+
+/*background-color */
+
+/*Hardcover Front*/
+.hardcover_front li:first-child {
+  background-color: #eee;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/*Reverse*/
+.hardcover_front li:last-child{
+  background: #fffbec;
+}
+
+/*HARDCOVER BACK*/
+.hardocver_back li:first-child {
+  background: #fffbec;
+}
+
+/* reverse */
+.hardcover_back li:last-child {
+	background: #fffbec;
+}
+
+.book_spine li:first-child {
+	background: #eee;
+}
+
+.book_spine li:last-child {
+	background: #333;
+}
+
+/*Thickness of cover*/
+.hardcover_front li:first-child:after,
+.hardcover_front li:first-child:before,
+.hardcover_front li:last-child:after,
+.hardcover_front li:last-child:before,
+.hardcover_back li:first-child:after,
+.hardcover_back li:first-child:before,
+.hardcover_back li:last-child:after,
+.hardcover_back li:last-child:before,
+.book_spine li:first-child:after,
+.book_spine li:first-child:before,
+.book_spine li:last-child:after,
+.book_spine li:last-child:before {
+  background: #999;
+}
+
+/* page */
+
+.page>li {
+	background: -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+	background: -moz-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+	background: -ms-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+	background: linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+	box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
+	border-radius: 0px 5px 5px 0px;
+}
+
+/* Opening cover,  Back cover and pages */
+.hardcover_front {
+  transform: rotateY(-34deg) translateZ(8px);
+  z-index: 100;
+}
+
+.hardcover_back{
+  transform: rotateY(-15deg) translateZ(-8px);
+}
+
+.page li:nth-child(1) {
+  transform: rotateY(-28deg);
+}
+.page li:nth-child(2) {
+  transform: rotateY(-30deg);
+}
+.page li:nth-child(3) {
+  transform: rotateY(-32deg);
+}
+.page li:nth-child(4) {
+  transform: rotateY(-34deg);
+}
+.page li:nth-child(5) {
+  transform: rotateY(-36deg);
+}
+
+/*position Transform transition*/
+.hardcover_front,
+.hardcover_back,
+.book_spine,
+.hardcover_front li,
+.hardcover_back li,
+.book_spine li {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+
+.hardcover_front,
+.hardcover_back {
+  transform-origin: 0% 100%;
+}
+
+.hardcover_front{
+  transition: all .8s ease, z-index .6s;
+}
+
+/* Harcover Front*/
+.hardcover_front li:first-child {
+  cursor: default;
+  user-select: none;
+  transform: translateZ(2px);
+}
+
+.hardcover_front li:last-child {
+  transform: rotateY(180deg) translateZ(2px);
+}
+
+/*hardcover back*/ 
+.hardcover_back li:first-child {
+  transform: translateZ(2px);
+}
+
+.hardcover_back li:last-child {
+  transform: translateZ(-2px);
+}
+
+/*Thickness of cover*/
+.hardcover_front li:first-child:after,
+.hardcover_front li:first-child:before,
+.hardcover_front li:last-child:after,
+.hardcover_front li:last-child:before,
+.hardcover_back li:first-child:after,
+.hardcover_back li:first-child:before,
+.hardcover_back li:last-child:after,
+.hardcover_back li:last-child:before,
+.book_spine li:first-child:after,
+.book_spine li:first-child:before,
+.book_spine li:last-child:after,
+.book_spine li:last-child:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* Harcover Front*/
+.hardcover_front li:first-child:after,
+.hardcover_front li:first-child:before{
+  width: 4px;
+  height: 100%;
+}
+
+.hardcover_front li:first-child:after{
+  transform: rotateY(90deg) translateZ(-2px) translateX(2px);
+}
+
+.hardcover_front li:first-child:before{
+  transform: rotateY(90deg) translateZ(158px) translateX(2px);
+}
+.hardcover_front li:last-child:after,
+.hardcover_front li:last-child:before{
+  width: 4px;
+  height: 160px;
+}
+
+.hardcover_front li:last-child:after{
+  transform: rotateX(90deg) rotateZ(90de) translateZ(80px) translateX(-2px) translateY(-78px);
+}
+
+.hardcover_front li:last-child:before{
+  box-shadow: 0px 0px 30px 5px #333;
+  transform: rotateX(90deg) rotateZ(90de) translateZ(140px) translateX(-2px) translateY(-78px);
+}
+
+/* Harcover Back*/
+.hardcover_back li:first-child:after,
+.hardcover_back li:first-child:before{
+  width: 4px;
+  height: 100%;
+}
+
+.hardcover_back li:first-child:after{
+  transform: rotateY(90deg) translateZ(-2px) translateX(2px);
+}
+
+.hardcover_back li:first-child:before{
+  transform: rotateY(90deg) translateZ(158px) translateX(2px);
+}
+.hardcover_back li:last-child:after,
+.hardcover_back li:last-child:before{
+  width: 4px;
+  height: 1060px;
+}
+
+.hardcover_back li:last-child:after{
+  transform: rotateX(90deg) rotateZ(90de) translateZ(80px) translateX(2px) translateY(-78px);
+}
+
+.hardcover_back li:last-child:before{
+  box-shadow: 10px -1px 80px 20px #666;
+  transform: rotateX(90deg) rotateZ(90de) translateZ(140px) translateX(-2px) translateY(-78px);
+}
+
+/*Book Spine*/
+.book_spine{
+  transform: rotateY(60deg) translateX(-5px) translateZ(-12px);
+  width: 16px;
+  z-index: 0;
+}
+.book_spine li:first-child {
+  transform: translateZ(2px);
+}
+
+.book_spine li:last-child {
+  transform: translateZ(-2px);
+}
+
+/*thickness of bookspine*/
+/*book spine*/
+.book_spine li:first-child:after,
+.book_spine li:first-child:before{
+  width: 4px;
+  height: 100%;
+}
+
+.book_spine li:first-child:after{
+  transform: rotateY(90deg) translateZ(-2px) translateX(2px);
+}
+
+.book_spine li:first-child:before{
+  transform: rotateY(90deg) translateZ(-12px);
+}
+.book_spine li:last-child:after,
+.book_spine li:last-child:before{
+  width: 4px;
+  height: 16px;
+}
+
+.book_spine li:last-child:after{
+  transform: rotateX(90deg) rotateZ(90de) translateZ(8px) translateX(2px) translateY(-6px);
+}
+
+.book_spine li:last-child:before{
+  box-shadow: 5px -1px 100px 40px rgba(0,0,0,0.2);
+  transform: rotateX(90deg) rotateZ(90de) translateZ(-210px) translateX(2px) translateY(-6px);
+}
+
+.page,
+.page>li {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform-style: preserve-3d;
+}
+
+.page{
+  width: 100%;
+  height: 98%;
+  top: 1%;
+  left: 3%;
+  z-index: 10;
+}
+
+.page li {
+  width: 100%;
+  height: 100%;
+  transform-origin: left center;
+  transform-property: transform;
+  transition-timing-function: ease;
+}
+
+.page>li:nth-child(1){
+  transition-duration: 0.6s;
+}
+.page>li:nth-child(2){
+  transition-duration: 0.6s;
+}
+.page>li:nth-child(3){
+  transition-duration: 0.4s;
+}
+.page>li:nth-child(4){
+  transition-duration: 0.5s;
+}
+.page>li:nth-child(5){
+  transition-duration: 0.6s;
+}
+
+/*Event*/
+.book:hover>.hardcover_front {
+  transform: rotateY(-145deg) translateZ(0);
+  z-index: 0;
+}
+
+.book:hover>.page li:nth-child(1){
+  transform: rotateY(-30deg);
+  transition-duration: 1.5s;
+}
+.book:hover>.page li:nth-child(2){
+  transform: rotateY(-35deg);
+  transition-duration: 1.8s;
+}
+.book:hover>.page li:nth-child(3){
+  transform: rotateY(-118deg);
+  transition-duration: 1.6s;
+}
+.book:hover>.page li:nth-child(4){
+  transform: rotateY(-130deg);
+  transition-duration: 1.4s;
+}
+.book:hover>.page li:nth-child(5){
+  transform: rotateY(-140deg);
+  transition-duration: 1.2s;
+}
+
+/*figcaption*/
+figcaption{
+  padding-left: 40px;
+  text-align: left;
+  position: absolute;
+  top: 0;
+  left: 160px;
+  width: 420px;
+  -webkit-backface-visibility: hidden;
+}
+
+figcaption h1 {
+ margin: 0;
+  font-size: 22px;
+  font-weight: 500;
+ }
+
+figcaption span {
+  color: #082330;
+  padding: 0.6em 0 1em 0;
+  display: block;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+figcaption p{
+  color: #082330;
+  font-size: 15px;
+  text-align: justify;
+  font-weight: 300;
+}
+
+@media screen and (max-width: 37.812em){
+  .align>li {
+    width: 100%;
+    min-height: 440px;
+    height: auto;
+    padding: 0;
+    margin: 0 0 30px 0;
+  }
+  .book{
+    margin: 0 auto;
+  }
+
+  figcaption {
+    text-align: center;
+    width: 320px;
+    top: 250px;
+    padding-left: 0;
+    left: -80px;
+    font-size: 90%;
+  }
 }
